--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </p>
     <h2>Available Resources</h2>
     <ul>
-        <li><a href="/df-root/DigitalFruitionRootCA.pem">Public Certificate</a></li>
-        <li><a href="/df-root/crl.pem">Certificate Revocation List (CRL)</a></li>
+        <li><a href="/root/DigitalFruitionRootCA.pem">Public Certificate</a></li>
+        <li><a href="/root/crl.pem">Certificate Revocation List (CRL)</a></li>
         <li><a href="https://www.digitalfruition.com/">Digital Fruition Website</a></li>
     </ul>
     <h2>Usage</h2>
